err/edo-client.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/edo_client'...
Listing './lib/python3.5/site-packages/edo_client/api'...
Compiling './lib/python3.5/site-packages/edo_client/api/base.py'...
***   File "./lib/python3.5/site-packages/edo_client/api/base.py", line 14
    except ConnectionError, e:
                          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/edo_client/api/message.py'...
***   File "./lib/python3.5/site-packages/edo_client/api/message.py", line 19
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/edo_client/cached.py'...
***   File "./lib/python3.5/site-packages/edo_client/cached.py", line 36
    raise ValueError, 'zopen.cacheorg.cacheorg.replace_prefix:ValueError:%s' % user
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/edo_client/client.py'...
***   File "./lib/python3.5/site-packages/edo_client/client.py", line 203
    print u' 正在连接到服务器... 地址：%s '% oc_api
                               ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/edo_client-0.9.3.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/py_oauth2-0.0.10.egg-info'...
Listing './lib/python3.5/site-packages/pyoauth2'...
Listing './lib/python3.5/site-packages/pyoauth2/libs'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests/packages'...
Listing './lib/python3.5/site-packages/requests/packages/charade'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/requests-1.2.0.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
